[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossbeam-channel = "0.5.6"
itertools = "0.10.5"
parking_lot = "0.12.1"
thiserror = "1.0.38"

[lib]
name = "utils"
path = "src/lib/mod.rs"
